# mybibli

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  change_request.yml  code_review_finding.yml  config.yml  known_failure.yml
.github/workflows/: _gates.yml  ci.yml  release.yml
.sqlx/: query-1b9079cd49c488776546f53bcb41e6f2740a28162a1e7ddd802de62e3ad86a86.json  query-2b9745c757448a941b93e4cc6fa0d4728dec8e5e6773a714a21d565d42d5ca95.json  query-32a5b76068f1f76deb1411d647d91b76ee983a37f2f39b3245d07bbcda1f633d.json  query-48fa12a28a7ac75217bca6a4bb759c920f5998815488b3fd0cd3d277686f052d.json  query-531ded91dec179fca5cab46c282df29e241b022fd942e05c0de81609bc29b875.json  query-bf8b103541fcc2d78786daa74a74d60d7dfb2a8d2cacc913626bdca80cda4fce.json  query-c7cd9e0872f74b7124dc85c27d6c3ad20e769f260a6d2ab5c40cb291fc71d571.json  query-f0909b6c02a55599d3ad1fe5d25edd9ad6e6e310d611917fac3120790dd949db.json  query-fe75394147a11de43936a2915dc71b4e37d0b46e687b4654f47d10b6c8ac9dec.json
_bmad-output/implementation-artifacts/: 1-1-project-skeleton-and-foundation.md  1-2-scan-field-and-catalog-page.md  1-3-title-crud-and-isbn-scanning.md  1-4-volume-management.md  1-5-contributor-management.md  1-6-search-and-browsing.md  1-7-scan-feedback-and-async-metadata.md  1-8-cross-cutting-patterns.md  1-9-minimal-login.md  2-1-location-hierarchy-crud.md  2-2-shelving-by-scan.md  (+47 more)
docs/: architecture.md  change_request.md  ci-cd.md  route-role-matrix.md
locales/: en.yml  fr.yml
migrations/: 20260329000000_initial_schema.sql  20260329000002_seed_dev_user.sql  20260330000001_seed_default_genres.sql  20260330000002_seed_default_reference_data.sql  20260331000001_add_fulltext_search.sql  20260331000003_add_pending_status.sql  20260331000004_fix_dev_user_hash.sql  20260401000001_seed_location_node_types.sql  20260403000001_add_manually_edited_fields.sql  20260412000001_widen_dewey_code.sql  20260414000001_seed_librarian_user.sql  20260416000001_add_users_preferred_language.sql  20260418000000_add_csrf_token_to_sessions.sql  20260424000001_create_admin_audit_table.sql  20260427000000_pin_reference_data_collation.sql
scripts/: e2e-reset.sh
src/: config.rs  db.rs  lib.rs  main.rs  templates_audit.rs  utils.rs
tests/: csrf_integration.rs  docker-compose.rust-test.yml  find_by_location_dewey.rs  find_similar.rs  metadata_fetch_dewey.rs  metadata_fetch_race.rs  role_gating.rs  search_filter_browse.rs  seeded_users.rs
(+226 files in other folders)
