[package]
name = "mybibli"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.8.8"
askama = "0.15.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "time"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "timeout", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
argon2 = "0.5"
image = "0.25"
barcoders = "2"
rand = "0.8"
rust-i18n = "3.1.5"
axum-extra = { version = "0.10", features = ["cookie"] }
async-trait = "0.1"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
